added jane-api config / added IPAMConfig Object to ContainerNetwork
